fix(button): button icon alignment

--- a/packages/oui-button/_mixins.less
+++ b/packages/oui-button/_mixins.less
@@ -191,6 +191,7 @@
     }
 
     .@{icon-selector}_circle::before {
+      line-height: 2;
       text-indent: 2px;
     }
 
@@ -210,6 +211,7 @@
     }
 
     .@{icon-selector}_circle::before {
+      line-height: 2;
       text-indent: -2px;
     }
 
